<resources>
    <string name="app_name">Super Manager</string>

    <string name="action_setting">Settings</string>
    <string name="action_about">About</string>
    <string name="action_buy">Buy Pro</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_system_apps">System Apps</string>
    <string name="action_buy_description">description</string>
    <string name="action_apps">Action app</string>

    <string name="search_noresults">No results were found for your search</string>
    <string name="search">Search</string>
    <string name="tap_exit">Tap again to close the app</string>
    <string name="action_hidden_apps">hidden apps</string>
    <string name="deleting">Deleting</string>
    <string name="deleting_done">Files deleted</string>
    <string name="deleting_error">Something went wrong removing the files</string>
    <string name="button_default">Default</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_delete_all">Delete all extracted APKs</string>
    <string name="settings_delete_all_description">Remove all the extracted APKs stored in the extraction folder</string>
    <string name="settings_custom_path">Custom folder for extracted APKs</string>
    <string name="settings_custom_filename">Default filename for extracted APKs</string>
    <string name="settings_sort_mode">Sort apps by</string>
    <string name="settings_customization">Restore customizations</string>
    <string name="settings_primary_color">Primary color</string>
    <string name="settings_primary_color_description">set the primary color for the toolbar and navigation bar. Requires Android 5.0+</string>
    <string name="settings_fab_color">Floating button color</string>
    <string name="settings_fab_color_description">Set the color for the Floating Action Button (FAB)</string>
    <string name="settings_navigation_black">Show navigation bar in black</string>
    <string name="settings_navigation_black_description">Dont use a custom color for the navigation bar.</string>
    <string name="settings_default_customization">Restore customizations</string>
    <string name="settings_default_customization_description">Restore colors to the default values</string>
    <string name="settings_license">Open Source licenses</string>
    <string name="settings_about">Love</string>
    <string name="action_hide">Hide</string>
    <string name="action_share">Share</string>
    <string name="transition_app_icon">App Icon Transition</string>
    <string name="dialog_run">Open</string>
    <string name="dialog_run_description">Run this app now</string>
    <string name="dialog_extract">Extract</string>
    <string name="dialog_extract_description">Extract this app under \"MLManager\" directory</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="dialog_uninstall_description">Uninstall this app right now</string>
    <string name="dialog_cache">Remove cache</string>
    <string name="dialog_cache_description">Remove the cache for this app</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_clear_data_description">Remove all application data for this app</string>
    <string name="send_to">Send \"%s\" using</string>
    <string name="dialog_uninstall_root">Are you sure you want to uninstall?</string>
    <string name="dialog_uninstall_root_description">You are one step away of removing a system app. Do not delete it if you are unsure, it could cause malfunction of the device.</string>
    <string name="button_uninstall">Uninstall</string>
    <string name="dialog_uninstalled_root">%s uninstalled</string>
    <string name="dialog_uninstalled_root_description">Some changes will not be applied until you restart your device. Do you want to restart now?</string>
    <string name="button_reboot">Reboot</string>
    <string name="button_later">Later</string>
    <string name="pro_feature_1">Hide apps from the device launcher</string>
    <string name="copied_clipboard">Copied to clipboard</string>
    <string name="dialog_cannot_open">%s can\'t be opened because it\'s hidden. Try to unhide before opening this app.</string>
    <string name="dialog_reboot">Reboot is necessary to display the changes. Do you want to reboot now?</string>
    <string name="action_unhide">Unhide</string>
    <string name="dialog_saved_description">\"%1$s\" APK has been saved into \"MLManager\" folder with name: %2$s</string>
    <string name="dialog_extract_fail">Extract failed</string>
    <string name="dialog_extract_fail_description">Unable to extract this APK. Please, try to restart your device.</string>
    <string name="dialog_root_required_description">Your device must be rooted with root permission given. If you have denied access once: Go to SuperUser app to give access to ML Manager.</string>

    <string name="pro_feature_2">Easily manage your hidden apps from the side panel</string>
    <string name="pro_feature_3">Uninstall system apps</string>
    <string name="pro_feature_4">Remove cache and clean data per app</string>
    <string name="dialog_saving"><![CDATA[Saving %s APK&8230;]]></string>
    <string name="dialog_saving_description">ML Manager is saving the APK into \"MLManager\" folder.</string>
    <string name="dialog_uninstalling"><![CDATA[Uninstalling %s APK&#8230;]]></string>
    <string name="dialog_uninstalling_description">ML Manager is uninstalling this app. Please wait.</string>
    <string name="dialog_cache_deleting"><![CDATA[Deleting cache files&#8230;]]></string>
    <string name="dialog_cache_deleting_description">Please wait while cache files are being deleted.</string>
    <string name="dialog_cache_success_description">Cache for %s has been removed</string>
    <string name="dialog_clear_data_deleting"><![CDATA[Deleting all files&#8230;]]></string>
    <string name="dialog_clear_data_deleting_description">Please wait while all files are being deleted.</string>
    <string name="dialog_clear_data_success_description">All data for %s has been removed</string>
    <string name="dialog_root_required">Root required</string>
    <string name="button_undo">Undo</string>
    <string name="about">Super manager help you manage apk app and extract apk from app</string>
</resources>